<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>merge</class>
 <widget class="QWidget" name="merge">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>550</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
    <horstretch>2</horstretch>
    <verstretch>2</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>760</width>
    <height>500</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>850</width>
    <height>600</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>merge</string>
  </property>
  <widget class="QStackedWidget" name="merge_pages">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>550</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>2</horstretch>
     <verstretch>2</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>760</width>
     <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>850</width>
     <height>600</height>
    </size>
   </property>
   <property name="lineWidth">
    <number>0</number>
   </property>
   <property name="currentIndex">
    <number>0</number>
   </property>
   <widget class="QWidget" name="merge_open_dir_page">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
      <horstretch>2</horstretch>
      <verstretch>2</verstretch>
     </sizepolicy>
    </property>
    <property name="minimumSize">
     <size>
      <width>760</width>
      <height>500</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>850</width>
      <height>600</height>
     </size>
    </property>
    <widget class="QPushButton" name="merge_open_dir_button">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
       <width>800</width>
       <height>550</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
       <horstretch>2</horstretch>
       <verstretch>2</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>760</width>
       <height>500</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>850</width>
       <height>600</height>
      </size>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
      <string>导入文件夹</string>
     </property>
     <property name="iconSize">
      <size>
       <width>16</width>
       <height>16</height>
      </size>
     </property>
    </widget>
   </widget>
   <widget class="QWidget" name="merge_para_page">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
      <horstretch>2</horstretch>
      <verstretch>2</verstretch>
     </sizepolicy>
    </property>
    <property name="minimumSize">
     <size>
      <width>760</width>
      <height>500</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>850</width>
      <height>600</height>
     </size>
    </property>
    <widget class="QPushButton" name="merge_output_path_button">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>320</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
      <string>请选择输出文件</string>
     </property>
    </widget>
    <widget class="QLabel" name="merge_row_heads_label">
     <property name="geometry">
      <rect>
       <x>410</x>
       <y>250</y>
       <width>281</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
      <string>合并表格头行数(1-99):</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="merge_row_heads_entry">
     <property name="geometry">
      <rect>
       <x>700</x>
       <y>250</y>
       <width>90</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
    </widget>
    <widget class="QLineEdit" name="merge_column_entry">
     <property name="geometry">
      <rect>
       <x>300</x>
       <y>250</y>
       <width>90</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
    </widget>
    <widget class="QLabel" name="merge_column_label">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>250</y>
       <width>291</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
      <string>合并指引列(例如:1或A): </string>
     </property>
    </widget>
    <widget class="QLabel" name="merge_import_label">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
      <string>已导入文件:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="merge_process_button">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>420</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
      <string>开始处理</string>
     </property>
    </widget>
    <widget class="QLabel" name="merge_output_path_label">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>370</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>10</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(247, 247, 247);</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="textInteractionFlags">
      <set>Qt::LinksAccessibleByMouse</set>
     </property>
    </widget>
    <widget class="QListView" name="merge_import_list_view">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>50</y>
       <width>800</width>
       <height>180</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
       <horstretch>2</horstretch>
       <verstretch>2</verstretch>
      </sizepolicy>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(247, 247, 247);</string>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
